All File Update

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Decor || Furniture Collection</title>
+    <meta name="description" content="HomeDecor – Explore modern furniture, interior design inspirations, and home decoration tips to make your space elegant and comfortable." />
+    <meta name="keywords" content="home decor, interior design, furniture, modern home, minimalist decor, bedroom design, living room ideas, wall art, lighting, sofa, home styling" />
+    <meta name="author" content="nur637788" />
+    <title>HomeDecor | Modern Interior & Furniture Design</title>
   </head>
+
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
